--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ node_modules/lodash/_arrayShuffle.js
 node_modules/lodash/_arraySome.js
 node_modules/lodash/_asciiSize.js
 node_modules/lodash/_asciiWords.js
+17-06-2023/index.js
+17-06-2023/index.js
+17-06-2023/prescedence.js
+17-06-2023/index.js
+17-06-2023/prescedence.js
