--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ node_modules/lodash/_asciiWords.js
 17-06-2023/prescedence.js
 17-06-2023/index.js
 17-06-2023/prescedence.js
+17-07-2023/task1.html
+17-07-2023/task1.js
+17-07-2023/task2.html
+17-07-2023/task2.js
