--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ node_modules/lodash/_asciiWords.js
 17-07-2023/task2.html
 17-07-2023/task2.js
 17-07-2023/task2.css
+24-07-2023/script.js
+24-07-2023/index.html
